[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/gameover.png" type="Texture" id=1]
[ext_resource path="res://Scenes/ExitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Themes/UI_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=6]

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.286275, 0.266667, 0.266667, 0.592157 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 984.0
margin_bottom = 580.0
alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 907.0
margin_bottom = 560.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ButtonContainer"]
margin_top = 16.0
margin_right = 850.0
margin_bottom = 216.0
rect_min_size = Vector2( 850, 200 )
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ButtonContainer"]
margin_top = 236.0
margin_right = 850.0
margin_bottom = 544.0
custom_constants/separation = 20
alignment = 1

[node name="Play" parent="MarginContainer/HBoxContainer/ButtonContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 236.0
margin_right = 613.0
margin_bottom = 108.0
size_flags_horizontal = 6
expand = false
stretch_mode = 5

[node name="Exit" parent="MarginContainer/HBoxContainer/ButtonContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 295.0
margin_top = 128.0
margin_right = 555.0
margin_bottom = 308.0
rect_min_size = Vector2( 260, 180 )

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
